Gpencil invert button was not working for Sculpt brushes #74596

Closed
opened 2020-03-10 00:59:33 +01:00 by Jesús · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 7), branch: greasepencil-object, commit date: 2020-03-07 10:12, hash: d4744d120e
Worked: (optional)

Short description of error
[The "thickness" does not work by shrinking the thickness.]

Exact steps for others to reproduce the error
[If I give thickness to the line, Blender gives it thickness, but if I thin the line, IT GIVES THICKNESS.]
[Based on the default startup or an attached .blend file (By doing a simple test.)]

Example: https://youtu.be/cnPi8I-_Rqg

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 7), branch: greasepencil-object, commit date: 2020-03-07 10:12, hash: `d4744d120e` Worked: (optional) **Short description of error** [The "thickness" does not work by shrinking the thickness.] **Exact steps for others to reproduce the error** [If I give thickness to the line, Blender gives it thickness, but if I thin the line, IT GIVES THICKNESS.] [Based on the default startup or an attached .blend file (By doing a simple test.)] Example: https://youtu.be/cnPi8I-_Rqg
Author

Added subscriber: @JesusAC

Added subscriber: @JesusAC

Added subscriber: @iss

Added subscriber: @iss

This seems to work correctly in master branch.

greasepencil-object branch had some trouble with scripts.

This seems to work correctly in master branch. greasepencil-object branch had some trouble with scripts.

Added subscriber: @antoniov

Added subscriber: @antoniov

Please, use master branch, not the grease pencil branch.

Please, use master branch, not the grease pencil branch.
Antonio Vazquez self-assigned this 2020-03-10 19:54:00 +01:00
Antonio Vazquez changed title from The "thickness" does not work by shrinking the thickness. to Gpencil invert button was not working for Sculpt brushes 2020-03-10 20:11:27 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by f9cca12886

This issue was referenced by f9cca128869fc07da46c095ac7dce16467121092

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74596
No description provided.