Fix T74596: Gpencil invert button was not working for Sculpt brushes

The button was not checked, only the pen position or the control key.